wzh-solution/files/wzh-solution-2026-06-25-09-21/envoy-vsr.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: http-8888
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8888
      per_connection_buffer_limit_bytes: 524288000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      request_headers_to_remove:
                        - x-vsr-looper-request
                        - x-vsr-looper-secret
                        - x-vsr-looper-decision
                        - x-vsr-looper-iteration
                      routes:
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-selected-model
                                string_match:
                                  exact: qwen35-27b-fp8
                          route:
                            cluster: qwen35_27b_fp8_cluster
                            timeout: 600s
                            idle_timeout: 600s
                            host_rewrite_literal: vsr-qwen35-27b-fp8:8000
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-selected-model
                                string_match:
                                  exact: qwen35-2b
                          route:
                            cluster: qwen35_2b_cluster
                            timeout: 600s
                            idle_timeout: 600s
                            host_rewrite_literal: vsr-qwen35-2b:8000
                        - match:
                            prefix: "/"
                          route:
                            cluster: qwen35_2b_cluster
                            timeout: 600s
                            idle_timeout: 600s
                            host_rewrite_literal: vsr-qwen35-2b:8000
                http_filters:
                  - name: envoy.filters.http.ext_proc
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                      allow_mode_override: true
                      grpc_service:
                        envoy_grpc:
                          cluster_name: extproc_service
                        timeout: 600s
                      processing_mode:
                        request_header_mode: SEND
                        response_header_mode: SEND
                        request_body_mode: BUFFERED
                        response_body_mode: BUFFERED
                      message_timeout: 600s
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                      format: "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %DURATION% \"%REQ(X-SELECTED-MODEL)%\" \"%RESP(X-VSR-SELECTED-MODEL)%\" \"%RESP(X-VSR-SELECTED-DECISION)%\" \"%UPSTREAM_HOST%\"\n"

  clusters:
    - name: extproc_service
      connect_timeout: 600s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: extproc_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: vsr-router
                      port_value: 50051

    - name: qwen35_2b_cluster
      connect_timeout: 600s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: qwen35_2b_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: vsr-qwen35-2b
                      port_value: 8000

    - name: qwen35_27b_fp8_cluster
      connect_timeout: 600s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: qwen35_27b_fp8_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: vsr-qwen35-27b-fp8
                      port_value: 8000
